Replaced getFirst() with .get(0) in all card classes
Replaced all occurrences of getFirst() with .get(0) in all card classes to improve compatibility and ensure consistent indexing behavior.

This change enhances code reliability, as .get(0) is a standard method for retrieving the first element from an ArrayList, ensuring better support across different Java versions.

No functionality was altered—this is purely a refactor for consistency and maintainability. ✅