@@ -51,7 +51,7 @@ public class King extends Standard {
 	{
 		Colour activePlayerColour = gameManager.getActivePlayerColour();
 		if(marbles.isEmpty()) return true;
-		Marble selectedMarble = marbles.getFirst();
+		Marble selectedMarble = marbles.get(0);
 		return activePlayerColour.equals(selectedMarble.getColour());
 	}
 	
@@ -76,7 +76,7 @@ public class King extends Standard {
 			gameManager.fieldMarble();
 		else
 		{
-		Marble selectedMarble = marbles.getFirst();
+		Marble selectedMarble = marbles.get(0);
 		boardManager.moveBy(selectedMarble, 13, true);
 		}
 	}
